# haskell-ide-engine

./: .gitmodules  .travis.yml  cabal.project  haskell-ide-engine.cabal  install.hs  stack-8.2.1.yaml  stack-8.2.2.yaml  stack-8.4.2.yaml  stack-8.4.3.yaml  stack-8.4.4.yaml  stack-8.6.1.yaml  stack-8.6.2.yaml  stack-8.6.3.yaml  stack-8.6.4.yaml  stack-8.6.5.yaml  stack.yaml
.azure/: macos-stack.yml
.circleci/: config.yml
app/: MainHie.hs
hie-hotswap-eg/: .ghc.environment.x86_64-linux-8.4.3  cabal.project  hie-hotswap-eg.cabal
hie-hotswap-eg/src/Haskell/Ide/Engine/Plugin/: ExampleHotLoad.hs
hie-plugin-api/: hie-plugin-api.cabal
hie-plugin-api/Haskell/Ide/Engine/: ArtifactMap.hs  Ghc.hs  GhcModuleCache.hs  HotSwap.hs  ModuleCache.hs  ModuleCacheTypes.hs  PluginApi.hs  PluginUtils.hs  PluginsIdeMonads.hs
src/Haskell/Ide/Engine/: Scheduler.hs
src/Haskell/Ide/Engine/LSP/: CodeActions.hs
src/Haskell/Ide/Engine/Plugin/: ApplyRefact.hs  Build.hs  GhcMod.hs  HaRe.hs  Haddock.hs  HieExtras.hs  HsImport.hs  Package.hs
src/Haskell/Ide/Engine/Transport/: JsonStdio.hs  LspStdio.hs
test/dispatcher/: Main.hs
test/functional/: FunctionalBadProjectSpec.hs  FunctionalCodeActionsSpec.hs
test/unit/: GhcModPluginSpec.hs
test/utils/: TestUtils.hs
