name:                hie-hotswap-eg
version:             0.2.2.0
synopsis:            Haskell IDE Engine hot-loaded example plugin
description:
  Skeleton configuration for a hotswappable shared object. Includes examples
  of raw data as well as functions that originate in a shared object.
  It must be configured with `--enable-library-for-ghci` to properly link all
  symbols via cabal.
license:             BSD3
license-file:        LICENSE
author:              Many,TBD when we release
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2018 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=2.0

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Haskell.Ide.Engine.Plugin.ExampleHotLoad
  -- other-modules:       SO.MyCode
  build-depends:       base >= 4.9 && < 4.12
                     , aeson
                     , containers
                     , haskell-lsp
                     , hie-plugin-api
                     , lens
                     , text
                     , unordered-containers
  if os(windows)
    build-depends:     Win32
  else
    build-depends:     unix
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010

  ------------------------------------------------------------
